# postcard-rpc-ds18b20-poc

./: README.md
firmware/: Cargo.toml
firmware/src/: lib.rs
host/: Cargo.toml
host/src/: client.rs
icd/: Cargo.toml
icd/src/: lib.rs
